--- a/fraud/pom.xml
+++ b/fraud/pom.xml
@@ -9,12 +9,7 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>customer</artifactId>
-
-    <properties>
-        <maven.compiler.source>18</maven.compiler.source>
-        <maven.compiler.target>18</maven.compiler.target>
-    </properties>
+    <artifactId>fraud</artifactId>
 
     <dependencies>
         <dependency>
@@ -36,5 +31,10 @@
             <version>3.1.3</version>
         </dependency>
     </dependencies>
+
+    <properties>
+        <maven.compiler.source>18</maven.compiler.source>
+        <maven.compiler.target>18</maven.compiler.target>
+    </properties>
 
 </project>
