--- a/fraud/pom.xml
+++ b/fraud/pom.xml
@@ -30,6 +30,12 @@
             <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
             <version>3.1.3</version>
         </dependency>
+        <dependency>
+            <groupId>pl.microservices</groupId>
+            <artifactId>clients</artifactId>
+            <version>1.0-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 
     <properties>
