--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,7 @@
         <module>customer</module>
         <module>fraud</module>
         <module>eureka-server</module>
+        <module>clients</module>
     </modules>
 
     <name>microservices</name>
@@ -25,6 +26,7 @@
         <spring.boot.dependencies.version>2.7.1</spring.boot.dependencies.version>
         <projectlombok.dependencies.version>1.18.24</projectlombok.dependencies.version>
         <spring.cloud-version>2021.0.3</spring.cloud-version>
+        <openfeign-version>3.1.3</openfeign-version>
     </properties>
 
     <dependencyManagement>
@@ -58,6 +60,11 @@
             <version>${spring.cloud-version}</version>
             <type>pom</type>
             <scope>import</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-openfeign</artifactId>
+            <version>${openfeign-version}</version>
         </dependency>
     </dependencies>
 
