--- a/customer/pom.xml
+++ b/customer/pom.xml
@@ -36,6 +36,16 @@
             <version>3.1.3</version>
         </dependency>
         <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-sleuth</artifactId>
+            <version>3.1.3</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-sleuth-zipkin</artifactId>
+            <version>3.1.3</version>
+        </dependency>
+        <dependency>
             <groupId>pl.microservices</groupId>
             <artifactId>clients</artifactId>
             <version>1.0-SNAPSHOT</version>
