--- a/notification/pom.xml
+++ b/notification/pom.xml
@@ -51,6 +51,15 @@
             <artifactId>spring-cloud-sleuth-zipkin</artifactId>
             <version>3.1.3</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-amqp</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>pl.microservices</groupId>
+            <artifactId>amqp</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
     </dependencies>
 
 </project>
