--- a/pom.xml
+++ b/pom.xml
@@ -30,6 +30,7 @@
         <projectlombok.dependencies.version>1.18.24</projectlombok.dependencies.version>
         <spring.cloud-version>2021.0.3</spring.cloud-version>
         <openfeign-version>3.1.3</openfeign-version>
+        <image>katancia/${project.artifactId}:${project.version}</image>
     </properties>
 
     <dependencyManagement>
@@ -78,8 +79,41 @@
                     <groupId>com.springframework.boot</groupId>
                     <artifactId>spring-boot-maven-plugin</artifactId>
                     <version>${spring.boot.maven.plugin.version}</version>
+                    <executions>
+                        <execution>
+                            <goals>
+                                <goal>repackage</goal>
+                            </goals>
+                        </execution>
+                    </executions>
+                </plugin>
+                <plugin>
+                    <groupId>com.google.cloud.tools</groupId>
+                    <artifactId>jib-maven-plugin</artifactId>
+                    <version>3.2.1</version>
+                    <configuration>
+                        <from>
+                            <image>eclipse-temurin:18</image>
+                        </from>
+                        <to>
+                            <tags>
+                                <tag>latest</tag>
+                            </tags>
+                        </to>
+                    </configuration>
                 </plugin>
             </plugins>
         </pluginManagement>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.10.1</version>
+                <configuration>
+                    <source>18</source>
+                    <target>18</target>
+                </configuration>
+            </plugin>
+        </plugins>
     </build>
 </project>
